docs/website/content/docs/v0.6.1/sdk/api/transcribe.mdx
---
title: "transcribe( )"
titleStyle: code
description: Provides a simple interface for transcribing audio by collecting all streaming results into a single string response.
---

```ts
function transcribe(params): Promise<string>;
```

Collects all streaming results from [`transcribeStream()`](/v0.6.1/sdk/api/transcribeStream) into a single string.

## Parameters

| Name | Type | Required? | Description |
| --- | --- | :---: | --- |
| params.modelId | `string` | ✓ | The identifier of the transcription model |
| params.audioChunk | `string \| Buffer` | ✓ | Audio input as file path (string) or audio buffer |
| params.prompt | `string` | ✗ | Optional initial prompt to guide the transcription |

## Returns

`Promise<string>` — The complete transcribed text.

## Throws

| Error | When |
| --- | --- |
| `TRANSCRIPTION_FAILED` | Transcription fails |

## Example

```typescript
const text = await transcribe({
  modelId: "whisper-model",
  audioChunk: "/path/to/audio.wav",
});
console.log(text);
```

## `SUPPORTED_AUDIO_FORMATS`

Use this exported constant to check which audio formats are accepted before passing a file to `transcribe()`. Avoids runtime errors from unsupported formats.

```typescript
import { SUPPORTED_AUDIO_FORMATS } from "@qvac/sdk";

const ext = filePath.split(".").pop();
if (!SUPPORTED_AUDIO_FORMATS.includes(ext)) {
  console.error(`Unsupported format: ${ext}`);
}
```
